
option java_outer_classname="GetRunningTasksCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetRunningTasksCommand {
	optional int64 requestId = 1;
}